# rbxmx-structural-parser

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cli.py  pyproject.toml  rbxmx_bundle.py
.github/workflows/: release.yml
rbxbundle/: __init__.py  _cli.py  deps.py  generator.py  parser.py
tests/: test_cli.py  test_generator.py  test_parser.py  test_version.py
