[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rbxbundle"
dynamic = ["version"]
description = "Bundle extractor for Roblox RBXMX/RBXLX files."
readme = "README.md"
requires-python = ">=3.9"

[project.scripts]
rbxbundle = "cli:main"

[tool.setuptools.dynamic]
version = {attr = "rbxbundle.__version__"}
